--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "nurfaizfy/digiflazz-php-library",
+    "name": "Maswend2020/digiflazz",
     "description": "Unofficial PHP Library Digiflazz",
     "type": "library",
     "require": {
-        "guzzlehttp/guzzle": "^7.0",
+        "guzzlehttp/guzzle": "^7.8.0",
         "symfony/http-foundation": "5.4.28"
     },
     "license": "MIT",
@@ -14,8 +14,8 @@
     },
     "authors": [
         {
-            "name": "nurfaizfy",
-            "email": "nurfaizfy19@gmail.com"
+            "name": "maswend",
+            "email": "maswend.2020@gmail.com"
         }
     ],
     "minimum-stability": "stable"
