--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "maswend2020/digiflazz",
+    "name": "mdigi",
     "description": "PHP Library Digiflazz",
     "type": "library",
     "require": {
