--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "mdigi",
-    "description": "Library Digiflazz",
+    "description": "Digiflazz",
     "type": "library",
     "require": {
         "guzzlehttp/guzzle": "^7.8.0",
