--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mdigi",
+    "name": "maswend2020/mdigi",
     "description": "Digiflazz",
     "type": "library",
     "require": {
